[package]
name = "oath2"
version = "0.9.1"
authors = ["Andrei Vacariu <andrei@avacariu.me>", "crypto-universe <ykp@protonmail.ch>"]
license = "MIT"
description = """
An pure Rust implementation of OATH algorithms. Provides HOTP, TOTP and OCRA algorithms.
"""
homepage = "https://github.com/crypto-universe/oath2"
repository = "https://github.com/crypto-universe/oath2"
documentation = "https://docs.rs/oath2/"
keywords = ["oath", "totp", "hotp", "ocra"]
categories = ["cryptography"]

[dependencies]
sha-1 = "0.3"
sha2 = "0.5"
digest = "0.5"
hmac = "0.1"
rustc-hex = "1.0"
